--- a/AntonStockApp/res/layout/activity_launcher.xml
+++ b/AntonStockApp/res/layout/activity_launcher.xml
@@ -8,7 +8,7 @@
     tools:ignore="MergeRootFrame" >
 
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/provRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
