--- a/AntonStockApp/res/layout/fragment_dimensions.xml
+++ b/AntonStockApp/res/layout/fragment_dimensions.xml
@@ -27,7 +27,7 @@
 
                     <TableRow
                         android:background="#555555"
-                        android:id="@+id/tableRow1"
+                        android:id="@+id/provRow"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp" >
         <TextView android:id="@+id/tv_11"
