--- a/AntonStockApp/res/layout/fragment_in_products_mp.xml
+++ b/AntonStockApp/res/layout/fragment_in_products_mp.xml
@@ -197,7 +197,7 @@
             </TableLayout>
 
             <TableRow
-                android:id="@+id/tableRow1"
+                android:id="@+id/provRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
