--- a/AntonStockApp/res/layout/fragment_search_mp.xml
+++ b/AntonStockApp/res/layout/fragment_search_mp.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/background_light" >
 
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/provRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
