--- a/AntonStockApp/res/layout/fragment_ustock_mp.xml
+++ b/AntonStockApp/res/layout/fragment_ustock_mp.xml
@@ -93,7 +93,7 @@
 
     </TableRow>
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/provRow"
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
