--- a/AntonStockApp/res/layout/activity_login.xml
+++ b/AntonStockApp/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/tableRow1"
+            android:id="@+id/provRow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp" >
