--- a/AntonStockApp/res/layout/activity_product_twopane.xml
+++ b/AntonStockApp/res/layout/activity_product_twopane.xml
@@ -35,24 +35,28 @@
             tools:layout="@android:layout/list_content" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
-            android:layout_weight="4"            
-            android:layout_height="match_parent">
-            
-            <FrameLayout
-                android:id="@+id/product_detail_container"
-                android:layout_height="match_parent"                          
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical" >
+
+            <ScrollView
+                android:id="@+id/adasdas"
                 android:layout_width="match_parent"
-				android:layout_weight="0.6"                
-                 />
+                android:layout_height="match_parent"
+                android:layout_weight="0.6" >
+
+                <FrameLayout
+                    android:id="@+id/product_detail_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </ScrollView>
 
             <TabHost
                 android:id="@android:id/tabhost"
-                android:layout_height="match_parent"                          
                 android:layout_width="match_parent"
-                android:layout_weight="0.4"
-                >
+                android:layout_height="match_parent"
+                android:layout_weight="0.4" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,7 +80,7 @@
                         android:id="@+id/pager"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="1" />
+                        android:layout_weight="0.57" />
                 </LinearLayout>
             </TabHost>
         </LinearLayout>
