--- a/AntonStockApp/res/layout/fragment_add_pmbacha.xml
+++ b/AntonStockApp/res/layout/fragment_add_pmbacha.xml
@@ -64,7 +64,7 @@
             </TableRow>
 
             <TableRow
-                android:id="@+id/tableRow1"
+                android:id="@+id/provRow"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" >
 
