--- a/AntonStockApp/res/layout/fragment_add_product_mp.xml
+++ b/AntonStockApp/res/layout/fragment_add_product_mp.xml
@@ -8,7 +8,7 @@
     tools:context="ar.com.antaresconsulting.antonstockapp.AddProductActivity" >
 
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/provRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
