--- a/AntonStockApp/res/layout/fragment_in_products_bachas_cli.xml
+++ b/AntonStockApp/res/layout/fragment_in_products_bachas_cli.xml
@@ -57,7 +57,7 @@
             </TableRow>
 
             <TableRow
-                android:id="@+id/tableRow1"
+                android:id="@+id/provRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
