--- a/AntonStockApp/res/layout/fragment_search_bacha.xml
+++ b/AntonStockApp/res/layout/fragment_search_bacha.xml
@@ -8,7 +8,7 @@
     android:padding="40dp" >
 
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/provRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
@@ -68,7 +68,7 @@
     </TableRow>
 
     <TableRow
-        android:id="@+id/TableRow01"
+        android:id="@+id/clienteRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp" >
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/TextView03"
+            android:id="@+id/TextView033"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_bacha_tipo"
