--- a/AntonStockApp/res/layout/fragment_search_insumo.xml
+++ b/AntonStockApp/res/layout/fragment_search_insumo.xml
@@ -27,7 +27,7 @@
 		
         <AutoCompleteTextView android:text=""
             android:id="@+id/nombreProd"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:ems="10" />
