--- a/AntonStockApp/res/layout/listitem_lp.xml
+++ b/AntonStockApp/res/layout/listitem_lp.xml
@@ -194,7 +194,7 @@
     android:textAppearance="?android:attr/textAppearanceSmall" />
 
 <TextView
-    android:id="@+id/TextView01"
+    android:id="@+id/TextView11"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 	android:layout_toRightOf="@+id/superficieTotal"
@@ -205,5 +205,12 @@
 
     </RelativeLayout>
 
+<CheckBox
+    android:id="@+id/prodVerificado"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@id/nombreProd"
+    android:layout_alignParentRight="true"
+    android:text="Verficado" />
 
 </RelativeLayout>
