--- a/AntonStockApp/res/layout/listitem_product.xml
+++ b/AntonStockApp/res/layout/listitem_product.xml
@@ -19,6 +19,7 @@
         android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
         android:layout_toRightOf="@id/prodImg"
         android:background="@color/actionbar_theme_color" />
 
@@ -27,7 +28,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
-        android:layout_margin="5dp"
         android:layout_toRightOf="@id/sepProdThumb"
         android:text="Nombre Prod"
         android:textSize="25sp" />
@@ -42,18 +42,31 @@
         android:clickable="true"
         android:focusable="false"
         android:text="" />
+    <TextView
+        android:id="@+id/atribs"
+        android:layout_alignLeft="@+id/nombreProd"        
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="69dp"
+        android:layout_marginLeft="5dp"
+        android:layout_below="@+id/checkBox1"         
+        android:text="Medium Text"
+        android:padding="5dp"
+        android:background="@drawable/shape"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TableLayout
         android:id="@+id/baseData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/nombreProd"
-        android:layout_below="@+id/checkBox1" >
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/atribs" >
 
         <TableRow
             android:id="@+id/codRow"
             android:layout_width="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_height="wrap_content" >
 
             <TextView
@@ -100,7 +113,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/cantStock"
+                android:id="@+id/stockRLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbl_prod_stockR"
@@ -120,7 +133,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/cantStock"
+                android:id="@+id/stockFLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbl_prod_stockF"
@@ -140,7 +153,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/cantStock"
+                android:id="@+id/stockILbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbl_prod_stockI"
@@ -154,4 +167,5 @@
                 android:textSize="15sp" />
         </TableRow>                
     </TableLayout>
+
 </RelativeLayout>
