--- a/AntonStockApp/res/layout/activity_login.xml
+++ b/AntonStockApp/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
         android:id="@+id/login_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:padding="10dip" >
 
         <TableRow
@@ -18,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/ImageView01"
-                android:layout_width="@dimen/login_logo_width"
-                android:layout_height="@dimen/login_logo_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:src="@drawable/login_mobile" />
         </TableRow>
