--- a/AntonStockApp/res/layout/fragment_search_insumo.xml
+++ b/AntonStockApp/res/layout/fragment_search_insumo.xml
@@ -6,7 +6,6 @@
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
     android:padding="40dp" >
-
 <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
@@ -19,18 +18,16 @@
             android:layout_gravity="center_vertical"
             android:text="@string/search_nombre" />
         
-		<ProgressBar android:id="@+id/loading_spinner"
-        style="?android:progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
-		
-        <AutoCompleteTextView android:text=""
+
+        <EditText
             android:id="@+id/nombreProd"
             android:layout_width="350dp"
+            android:ems="10"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:ems="10" />
+            >
+
+            <requestFocus />
+        </EditText>
 
     </TableRow>
 
